# subnautica-th

./: .gitignore  MARKING  README.md  Roadmap.md  config.py  editor.py  main.py  pyproject.toml
agent/agent_auditor/: NOTE.md  auditor_agent.md  auditor_agent_v2.md
agent/agent_content_localizer/: filtered_ency_result.json  senior_content_localizer_agent.md
agent/agent_core_system_ui/: prompt_v1.md  prompt_v2.md
agent/agent_glossary_items/: NOTE.md  Tone.md  glossary_format_rule.md  prompt_v1.md
agent/agent_survivor/: Tone.md  prompt_v1.md
agent/agent_xenobiologist/: expert_translator.md  prompt.md
classification/: category_tree.py  classify.py
docs/: HOW_TO_INSTALL_TEMPLATE.txt  translation_guide.md
phase_mapping/: generate_phase_json.py
pre_processing/: compare_key.py  preprocess.py
utils/: __init__.py  file_io.py  phase_complete.py  phase_inspection.py  phase_review.py  phase_setup.py  release.py  setup_project.py
